--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,36 +1,31 @@
-# This file configures the hello-world app which serves public web traffic.
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: helloworld-gke
+  name: hello-world
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: hello
+  replicas: 1 
   template:
     metadata:
       labels:
-        app: hello
+        app: hello-world
     spec:
       containers:
-      - name: hello-app
-        image: gajendraachar/hello-world:latest
-        # This app listens on port 8080 for web traffic by default.
-        ports:
-        - containerPort: 8080
-        env:
-          - name: PORT
-            value: "8080"
----          
+      - name: hello-world-pod
+        image: arungupta/helloworld-spring-boot:latest
+        ports: 
+        - containerPort: 80
+        - containerPort: 443
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello
+  name: hello-world-service
 spec:
-  type: LoadBalancer
   selector:
-    app: hello
+    app: hello-world
   ports:
-  - port: 80
+  - name: http
+    protocol: TCP
+    port: 80
     targetPort: 8080
+  type: LoadBalancer
