--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,31 +1,36 @@
-apiVersion: extensions/v1beta1
+# This file configures the hello-world app which serves public web traffic.
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-world
+  name: helloworld-gke
 spec:
-  replicas: 1 
+  replicas: 1
+  selector:
+    matchLabels:
+      app: hello
   template:
     metadata:
       labels:
-        app: hello-world
+        app: hello
     spec:
       containers:
-      - name: hello-world-pod
-        image: arungupta/helloworld-spring-boot:latest
-        ports: 
-        - containerPort: 80
-        - containerPort: 443
+      - name: hello-app
+        image: shashank54321/hello-world:latest
+        # This app listens on port 8080 for web traffic by default.
+        ports:
+        - containerPort: 8080
+        env:
+          - name: PORT
+            value: "8080"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: hello
 spec:
-  selector:
-    app: hello-world
-  ports:
-  - name: http
-    protocol: TCP
-    port: 80
-    targetPort: 8080
   type: LoadBalancer
+  selector:
+    app: hello
+  ports:
+  - port: 80
+    targetPort: 8080
